--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@notionhq/client": "^1.0.4",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
-    "node-schedule": "^2.1.0"
+    "node-schedule": "^2.1.0",
+    "notion-to-md": "^2.3.2"
   }
 }
