--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@notionhq/client": "^1.0.4",
+    "@pinata/sdk": "^1.1.24",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "node-schedule": "^2.1.0",
