--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "type": "module",
   "dependencies": {
+    "@ethersproject/providers": "^5.6.3",
     "@notionhq/client": "^1.0.4",
     "@pinata/sdk": "^1.1.24",
+    "@snapshot-labs/snapshot.js": "^0.3.68",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "ethers": "^5.6.3",
     "node-schedule": "^2.1.0",
     "notion-to-md": "^2.3.2"
   }
