--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "type": "module",
+  "scripts": {
+    "start": "export NODE_ENV='prod' && node nance.js",
+    "dev": "export NODE_ENV='dev' && node nance.js"
+  },
   "dependencies": {
-    "@ethersproject/providers": "^5.6.3",
     "@notionhq/client": "^1.0.4",
     "@pinata/sdk": "^1.1.24",
     "@snapshot-labs/snapshot.js": "^0.3.68",
@@ -10,5 +13,8 @@
     "ethers": "^5.6.3",
     "node-schedule": "^2.1.0",
     "notion-to-md": "^2.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0"
   }
 }
