--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.3",
+    "graphql-request": "^4.2.0",
     "node-schedule": "^2.1.0",
     "notion-to-md": "^2.3.2"
   },
